--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.albertovosgerau.unitymvcc": "https://github.com/AlbertoVosgerau/UnityMVC-C.git#releases/0.0.3",
+    "com.unity.cinemachine": "2.8.4",
     "com.unity.collab-proxy": "1.15.1",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.7",
